--- a/main/css/index.css
+++ b/main/css/index.css
@@ -1,4 +1,27 @@
 /*default setting*/
-* { margin:0; padding:0; border:0; font-size:100%; list-style:none; box-sizing:border-box; font-weight:normal; }
+* { margin:0; padding:0; border:0; font-size:100%; list-style:none; box-sizing:border-box; font-weight:normal; border-collapse:seperate; }
+.font_red { color:red; }
 
-.container { position: relative; width:1280px; border:1px solid black; margin:0 auto; }
+.container { position: relative; width:1280px; margin:0 auto; }
+@media(max-width:1300px)
+{
+    .container { width:100%; }
+}
+
+
+/*header*/
+
+
+
+/*contents*/
+
+.contents .schedule_list { overflow:hidden; }
+.contents .schedule_list h1 { float:left; width:13.285714%; text-align:center; font-weight: bold; margin:0.5%; border:1px solid black; border-radius: 5px;  }
+.contents .schedule_list .prev_month_day { background:#2e2e2e9d; }
+.contents .schedule_list > div { position: relative; float:left; width:13.285714%; text-align:center; padding-bottom:16.285713%; border:1px solid black; margin:0.5%; 
+    border-radius:5px; cursor:pointer; }
+.contents .schedule_list .schedule_contents { position:absolute; width:100%; border:none; }
+
+
+
+/*footer*/
